Fix scrollbar blink when overflowing.

--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@ body
     height: 100%;
     margin: 0;
     background: rgb(165,240,255);
+    overflow-x: hidden;
 }
 
 #header
@@ -136,7 +137,7 @@ form
 }
 
 
-@-webkit-keyframes glow {
+@keyframes glow {
   from {
     text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
   }
